Add postgres with s3 backup

--- a/db/kustomization.yaml
+++ b/db/kustomization.yaml
@@ -1,4 +1,5 @@
 kind: Kustomization
 resources:
-  - redis-statestore.yaml
+  #- redis-statestore.yaml
+  - wikijs-postgres.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
