--- a/ingress/wikijs.yaml
+++ b/ingress/wikijs.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: wikijs
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 
 spec:
   tls:
