Update to the new CRD style

--- a/metallb-system/kustomization.yaml
+++ b/metallb-system/kustomization.yaml
@@ -2,11 +2,5 @@ namespace: metallb-system
 
 resources:
   - github.com/metallb/metallb//manifests?ref=v0.13.4
-
-configMapGenerator:
-  - name: config
-    files:
-      - config/config
-
-generatorOptions:
-  disableNameSuffixHash: true
+  - advertisement.yaml
+  - ip-address-pool.yaml
