--- a/metallb-system/kustomization.yaml
+++ b/metallb-system/kustomization.yaml
@@ -1,6 +1,7 @@
+Kind: Kustomization
 namespace: metallb-system
 
 resources:
-  - github.com/metallb/metallb/config/native?ref=v0.13.4
+  - github.com/metallb/metallb/config/native?ref=v0.13.5
   - advertisement.yaml
   - ip-address-pool.yaml
