--- a/ingress/home-assistant.yaml
+++ b/ingress/home-assistant.yaml
@@ -1,24 +1,24 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: grafana
-  namespace: monitoring
+  name: home-assistant
+  namespace: home-assistant
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
     - hosts:
-        - grafana.draco.scalar.cloud
-      secretName: grafana-draco-tls
+        - home-assistant.draco.scalar.cloud
+      secretName: home-assistant-draco-tls
   rules:
-    - host: grafana.draco.scalar.cloud
+    - host: home-assistant.draco.scalar.cloud
       http:
         paths:
           - path: /
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
-                name: grafana
+                name: home-assistant
                 port:
-                  number: 3000
+                  number: 8123
