--- a/ingress/home-assistant-code.yaml
+++ b/ingress/home-assistant-code.yaml
@@ -1,27 +1,27 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: longhorn
-  namespace: longhorn-system
+  name: ha-code
+  namespace: home-assistant
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-staging"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: basic-auth
     nginx.ingress.kubernetes.io/auth-realm: 'You a netrunner?'
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
     - hosts:
-        - longhorn.draco.scalar.cloud
-      secretName: longhorn-tls
+        - ha-code.draco.scalar.cloud
+      secretName: ha-code-draco-tls
   rules:
-    - host: longhorn.draco.scalar.cloud
+    - host: ha-code.draco.scalar.cloud
       http:
         paths:
           - path: /
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
-                name: longhorn-frontend
+                name: home-assistant-codeserver
                 port:
-                  name: http
+                  number: 12321
