--- a/ingress/kustomization.yaml
+++ b/ingress/kustomization.yaml
@@ -2,7 +2,10 @@ kind: Kustomization
 resources:
   - grafana.yaml
   - argocd.yaml
-  - foundryvtt.yaml
-  - wikijs.yaml
+  - home-assistant-code.yaml
+  - home-assistant.yaml
+#  - kibana.yaml
+#  - foundryvtt.yaml
   - longhorn.yaml
+#  - fleet-server.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
