--- a/argocd/install.yaml
+++ b/argocd/install.yaml
@@ -9701,6 +9701,15 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
+data:
+  resource.exclusions: |
+   - apiGroups:
+       - cilium.io
+     kinds:
+       - CiliumIdentity
+     clusters:
+       - "*"
+
 ---
 apiVersion: v1
 kind: ConfigMap
