--- a/ingress/kustomization.yaml
+++ b/ingress/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
 #  - foundryvtt.yaml
   - longhorn.yaml
 #  - fleet-server.yaml
+  - statping.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
