Bring back kibana ingress

--- a/ingress/kustomization.yaml
+++ b/ingress/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - argocd.yaml
   - home-assistant-code.yaml
   - home-assistant.yaml
-#  - kibana.yaml
+  - kibana.yaml
 #  - foundryvtt.yaml
   - longhorn.yaml
 #  - fleet-server.yaml
