--- a/ingress/longhorn.yaml
+++ b/ingress/longhorn.yaml
@@ -5,10 +5,10 @@ metadata:
   namespace: longhorn-system
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: basic-auth
-    nginx.ingress.kubernetes.io/auth-realm: 'You a netrunner?'
+    nginx.ingress.kubernetes.io/auth-realm: 'You a netrunner'
 spec:
   tls:
     - hosts:
