--- a/ingress/fleet-server.yaml
+++ b/ingress/fleet-server.yaml
@@ -5,18 +5,14 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
-  tls:
-    - hosts:
-        - fleet-server.draco.scalar.cloud
-      secretName: fleet-server-draco-tls
   rules:
     - host: fleet-server.draco.scalar.cloud
       http:
         paths:
           - path: /
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 name: fleet-server-agent-http
