--- a/ingress/kustomization.yaml
+++ b/ingress/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - kibana.yaml
 #  - foundryvtt.yaml
   - longhorn.yaml
-#  - fleet-server.yaml
+  - fleet-server.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
