Remove reverse proxy in front of fleet-server, replacing with LB

--- a/elastic/fleet-server.yaml
+++ b/elastic/fleet-server.yaml
@@ -3,6 +3,10 @@ kind: Agent
 metadata:
   name: fleet-server
 spec:
+  http:
+    service:
+      spec:
+        type: LoadBalancer
   version: 8.4.2
   kibanaRef:
     name: kibana
