--- a/elastic/kibana.yaml
+++ b/elastic/kibana.yaml
@@ -14,7 +14,7 @@ spec:
   config:
     server.publicBaseUrl: https://kibana.draco.scalar.cloud
     xpack.fleet.agents.elasticsearch.hosts: ["https://elasticsearch-es-http.default.svc:9200"]
-    xpack.fleet.agents.fleet_server.hosts: ["https://fleet-server-agent-http.default.svc:8220"]
+    xpack.fleet.agents.fleet_server.hosts: ["https://fleet-server-agent-http.default.svc:8220","https://fleet-server.draco.scalar.cloud:8220"]
     xpack.fleet.packages:
     - name: system
       version: latest
