--- a/elastic/filebeat-autodiscover.yaml
+++ b/elastic/filebeat-autodiscover.yaml
@@ -34,6 +34,13 @@ spec:
         hostNetwork: true # Allows to provide richer host metadata
         containers:
         - name: filebeat
+          resources:
+            requests:
+              memory: 300Mi
+              cpu: 1
+            limits:
+              memory: 500Mi
+              cpu: 1
           securityContext:
             runAsUser: 0
             # If using Red Hat OpenShift uncomment this:
