Remove self-signed cert

--- a/elastic/elasticsearch.yaml
+++ b/elastic/elasticsearch.yaml
@@ -3,6 +3,10 @@ kind: Elasticsearch
 metadata:
   name: elasticsearch
 spec:
+  http:
+    tls:
+      selfSignedCertificate:
+        disabled: true
   version: 8.4.2
   nodeSets:
   - name: default
