--- a/ingress/socks.yaml
+++ b/ingress/socks.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: socks-shop
-  namespace: socks-shop
+  name: sock-shop
+  namespace: sock-shop
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-staging"
