--- a/minecraft/all-the-mods-8/creative/instance.yaml
+++ b/minecraft/all-the-mods-8/creative/instance.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: minecraft-allthemods8-creative
-  namespace: minecraft
+  namespace: argocd
 spec:
   project: default
   source:
