--- a/minecraft/all-the-mods-8/creative/instance.yaml
+++ b/minecraft/all-the-mods-8/creative/instance.yaml
@@ -51,7 +51,7 @@ spec:
         - name: minecraftServer.query.enabled
           value: 'true'
         - name: minecraftServer.ops
-          value: ServerGopher
+          value: ServerGopher, Strange_Quark
         - name: minecraftServer.serviceType
           value: LoadBalancer
     chart: minecraft
